chart/templates/apps_v1_deployment_tekton-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    operator.tekton.dev/release: v0.50.0
    version: v0.50.0
  name: tekton-operator
  namespace: tekton-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tekton-operator
  template:
    metadata:
      labels:
        app: tekton-operator
        name: tekton-operator
    spec:
      containers:
      - env:
        - name: SYSTEM_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: OPERATOR_NAME
          value: tekton-operator
        - name: IMAGE_PIPELINES_PROXY
          value: gcr.io/tekton-releases/github.com/tektoncd/operator/cmd/kubernetes/proxy-webhook:v0.50.0@sha256:92609a303f151781f58c24ac72deab67d12b9fa7553ee14b4d6e9ae5f7e0d9d9
        - name: IMAGE_JOB_PRUNER_TKN
          value: gcr.io/tekton-releases/dogfooding/tkn@sha256:025de221fb059ca24a3b2d988889ea34bce48dc76c0cf0d6b4499edb8c21325f
        - name: METRICS_DOMAIN
          value: tekton.dev/operator
        - name: VERSION
          value: devel
        - name: CONFIG_OBSERVABILITY_NAME
          value: tekton-config-observability
        - name: AUTOINSTALL_COMPONENTS
          valueFrom:
            configMapKeyRef:
              key: AUTOINSTALL_COMPONENTS
              name: tekton-config-defaults
        - name: DEFAULT_TARGET_NAMESPACE
          valueFrom:
            configMapKeyRef:
              key: DEFAULT_TARGET_NAMESPACE
              name: tekton-config-defaults
        image: gcr.io/tekton-releases/github.com/tektoncd/operator/cmd/kubernetes/operator:v0.50.0@sha256:fc77b6184ab793afa284081cab1d24d1d97a3c5dde9bb59a7ee0f4b4cb27e023
        imagePullPolicy: Always
        name: tekton-operator
      serviceAccountName: tekton-operator
