chart/templates/v1_service_tekton-operator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-pipelines-controller
    version: devel
  name: tekton-operator
  namespace: tekton-operator
spec:
  ports:
  - name: http-metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: tekton-operator
    name: tekton-operator
