chart/templates/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_config.webhook.operator.tekton.dev.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: tekton-operator
    name: tekton-operator-webhook
  name: config.webhook.operator.tekton.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    service:
      name: tekton-operator-webhook
      namespace: tekton-operator
  failurePolicy: Fail
  name: config.webhook.operator.tekton.dev
  namespaceSelector:
    matchExpressions:
    - key: operator.tekton.dev/release
      operator: Exists
  sideEffects: None
